<resources>
    <string name="app_name">AndroidQuizApp</string>
    <string name="title">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="go_button_string">Let\'s Go!</string>
    <string name="hint">e.g. John Smith</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="finish">FINISH</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="grats">Hey, Congratulations!</string>
    <string name="name">Name</string>
    <string name="your_score">Your Score</string>
</resources>