<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:layout_gravity="center"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context="MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/white">
        <LinearLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="#7A8089"
                    android:hint="@string/hint"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/lets_go_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_button_string"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>